@@ -133,6 +133,12 @@ public final class CFMetaData
         return this;
     }
 
+    public CFMetaData allowAutoSnapshot(boolean prop)
+    {
+        params = TableParams.builder(params).allowAutoSnapshot(prop).build();
+        return this;
+    }
+
     public CFMetaData bloomFilterFpChance(double prop)
     {
         params = TableParams.builder(params).bloomFilterFpChance(prop).build();
